examples/resort/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: resort
spec:
  selector:
    app: resort
  ports:
  - port: 9002
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resort
  labels:
    app: resort
  annotations:
    services.k8s.cloudentity.com/spec-url: "https://gist.githubusercontent.com/lgonczarik/3699bcab234ed32b4d2daed91c5e9ad3/raw/7e7a72e6b586253ca78dc8b1020b2afe7eee98e8/resort.graphql"
    services.k8s.cloudentity.com/graphql-path: "/graphql"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resort
  template:
    metadata:
      labels:
        app: resort
    spec:
      serviceAccountName: resort
      containers:
      - name: resort
        image: "resort:demo"
        ports:
        - containerPort: 9002
          name: http
